fixed news posts paragraph alignment issue and hover color

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1103,10 +1103,6 @@ img {
   margin-left: 0.75rem;
 }
 
-.mb-\[3\.25rem\] {
-  margin-bottom: 3.25rem;
-}
-
 .mb-20 {
   margin-bottom: 5rem;
 }
@@ -1306,6 +1302,62 @@ img {
 
 .w-1\/5 {
   width: 20%;
+}
+
+.w-\[60\%\] {
+  width: 60%;
+}
+
+.w-\[80\%\] {
+  width: 80%;
+}
+
+.w-\[100\%\] {
+  width: 100%;
+}
+
+.w-\[40\%\] {
+  width: 40%;
+}
+
+.w-\[50\%\] {
+  width: 50%;
+}
+
+.w-\[30\%\] {
+  width: 30%;
+}
+
+.w-\[70\%\] {
+  width: 70%;
+}
+
+.w-\[20\%\] {
+  width: 20%;
+}
+
+.w-\[10\%\] {
+  width: 10%;
+}
+
+.w-\[90\%\] {
+  width: 90%;
+}
+
+.w-\[33\%\] {
+  width: 33%;
+}
+
+.w-\[67\%\] {
+  width: 67%;
+}
+
+.w-\[30\.375rem\] {
+  width: 30.375rem;
+}
+
+.w-\[16\.438rem\] {
+  width: 16.438rem;
 }
 
 .max-w-\[15rem\] {
@@ -1807,6 +1859,11 @@ img {
   background-color: #517c4b80;
 }
 
+.bg-lime-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(132 204 22 / var(--tw-bg-opacity));
+}
+
 .bg-black\/50 {
   background-color: rgb(0 0 0 / 0.5);
 }
@@ -1844,9 +1901,14 @@ img {
   background-color: transparent;
 }
 
-.bg-lime-500 {
+.bg-red-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(132 204 22 / var(--tw-bg-opacity));
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-blue-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
@@ -2246,8 +2308,8 @@ img {
   font-size: 1.25rem;
 }
 
-.text-\[0\.875rem\] {
-  font-size: 0.875rem;
+.text-\[0\.8125rem\] {
+  font-size: 0.8125rem;
 }
 
 .text-5xl {
@@ -2261,10 +2323,6 @@ img {
 
 .text-\[1\.5rem\] {
   font-size: 1.5rem;
-}
-
-.text-\[0\.8125rem\] {
-  font-size: 0.8125rem;
 }
 
 .font-normal {
@@ -2828,6 +2886,12 @@ img {
   border-color: rgb(100 116 139 / var(--tw-border-opacity));
 }
 
+.before\:bg-lime-500::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(132 204 22 / var(--tw-bg-opacity));
+}
+
 .before\:bg-\[\#689f38\]::before {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
@@ -2855,12 +2919,6 @@ img {
 .before\:bg-slate-900\/50::before {
   content: var(--tw-content);
   background-color: rgb(15 23 42 / 0.5);
-}
-
-.before\:bg-lime-500::before {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(132 204 22 / var(--tw-bg-opacity));
 }
 
 .before\:opacity-0::before {
@@ -3197,6 +3255,11 @@ img {
   background-color: rgb(20 83 45 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-\[\#80b744\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(128 183 68 / var(--tw-bg-opacity));
@@ -3219,11 +3282,6 @@ img {
 .hover\:bg-slate-900:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-white:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-gradient-to-r:hover {
@@ -3352,11 +3410,6 @@ img {
   bottom: 1.25rem;
 }
 
-.group:hover .group-hover\:border-\[\#66bb6a\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(102 187 106 / var(--tw-border-opacity));
-}
-
 .group:hover .group-hover\:border-lime-500 {
   --tw-border-opacity: 1;
   border-color: rgb(132 204 22 / var(--tw-border-opacity));
@@ -3365,11 +3418,6 @@ img {
 .group:hover .group-hover\:bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
-
-.group:hover .group-hover\:bg-\[\#66bb6a\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(102 187 106 / var(--tw-bg-opacity));
 }
 
 .group:hover .group-hover\:bg-lime-500 {
@@ -3382,6 +3430,11 @@ img {
   color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 
+.group:hover .group-hover\:text-lime-500 {
+  --tw-text-opacity: 1;
+  color: rgb(132 204 22 / var(--tw-text-opacity));
+}
+
 .group:hover .group-hover\:text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -3390,11 +3443,6 @@ img {
 .group:hover .group-hover\:text-slate-900 {
   --tw-text-opacity: 1;
   color: rgb(15 23 42 / var(--tw-text-opacity));
-}
-
-.group:hover .group-hover\:text-lime-500 {
-  --tw-text-opacity: 1;
-  color: rgb(132 204 22 / var(--tw-text-opacity));
 }
 
 .group:hover .group-hover\:opacity-100 {
@@ -3555,6 +3603,14 @@ img {
 
   .sm\:w-\[90\%\] {
     width: 90%;
+  }
+
+  .sm\:w-\[33\%\] {
+    width: 33%;
+  }
+
+  .sm\:w-\[67\%\] {
+    width: 67%;
   }
 
   .sm\:max-w-\[640px\] {
@@ -3839,6 +3895,10 @@ img {
     margin-left: 0px;
   }
 
+  .md\:mb-20 {
+    margin-bottom: 5rem;
+  }
+
   .md\:mt-5 {
     margin-top: 1.25rem;
   }
@@ -3853,10 +3913,6 @@ img {
 
   .md\:mt-4 {
     margin-top: 1rem;
-  }
-
-  .md\:mb-20 {
-    margin-bottom: 5rem;
   }
 
   .md\:block {
@@ -3893,6 +3949,14 @@ img {
 
   .md\:w-\[80\%\] {
     width: 80%;
+  }
+
+  .md\:w-\[33\%\] {
+    width: 33%;
+  }
+
+  .md\:w-\[67\%\] {
+    width: 67%;
   }
 
   .md\:max-w-\[960px\] {
@@ -4261,6 +4325,14 @@ img {
     width: 53%;
   }
 
+  .lg\:w-\[16\.438rem\] {
+    width: 16.438rem;
+  }
+
+  .lg\:w-\[30\.375rem\] {
+    width: 30.375rem;
+  }
+
   .lg\:max-w-\[17rem\] {
     max-width: 17rem;
   }
@@ -4406,11 +4478,6 @@ img {
     padding-right: 0.25rem;
   }
 
-  .lg\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-
   .lg\:px-3 {
     padding-left: 0.75rem;
     padding-right: 0.75rem;
@@ -4424,6 +4491,11 @@ img {
   .lg\:py-0 {
     padding-top: 0px;
     padding-bottom: 0px;
+  }
+
+  .lg\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
 
   .lg\:pr-3\.5 {
@@ -4657,6 +4729,14 @@ img {
     width: 60%;
   }
 
+  .xl\:w-\[16\.438rem\] {
+    width: 16.438rem;
+  }
+
+  .xl\:w-\[30\.375rem\] {
+    width: 30.375rem;
+  }
+
   .xl\:max-w-\[1280px\] {
     max-width: 1280px;
   }
@@ -4702,11 +4782,6 @@ img {
   .xl\:px-3 {
     padding-left: 0.75rem;
     padding-right: 0.75rem;
-  }
-
-  .xl\:py-8 {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
   }
 
   .xl\:py-5 {
